enlazando index y cambiando <title>

--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
+    <title>PÁGINA PARA EL CURSO</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
 </head>
 <body>
     <p>Lorem ipsum dolor sit amet computadora controladora consectetur adipisicing elit. Dolorem optio quod delectus veniam quis libero blanditiis iusto sunt similique ratione facilis, voluptas aut sint illo raquelalonso@gmail.com et, unde molestias eius molestiae?</p>
     <a href="https://youtube.com"></a>
+    <script src="main.js"></script>
 </body>
 </html> 
 
